<?xml version="1.0"?>

<package>
  <name>cam_calib</name>
  <version>0.1.0</version>

  <description>
    "staubli_arm_perception_utilities" is a ROS package developed(being developed) for Fanuc LRMATE 200id7L robotic arm at ChiconyPower CO..
    Main applications right now are; 
    * Control of Robot via GUI  
    * Pick and place 
  </description>

  <license>BSD</license>

  <author email="fetulahatas1@gmail.com">Fetullah Atas</author>
  <maintainer email="fetulahatas1@gmail.com">Fetullah Atas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>staubli_arm_perception_utilities</build_depend>
  <build_depend>visp_camera_calibration</build_depend>
  <build_depend>common</build_depend>

  <run_depend>common</run_depend>
  <run_depend>visp_camera_calibration</run_depend>
  <run_depend>staubli_arm_perception_utilities</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>


</package>
