<?xml version="1.0"?>

<package>
  <name>common</name>
  <version>0.1.0</version>

  <description>
  hand-eye calibration based on vision_visp, a ros package to find transformation matrix camera to robot tool
  </description>

  <license>BSD</license>

  <author email="fetulahatas1@gmail.com">Fetullah Atas</author>
  <maintainer email="fetulahatas1@gmail.com">Fetullah Atas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  
  <export>
  </export>
  
</package>
